<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_default"
    tools:context=".ui.MoreFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:gravity="center"
        android:text="@string/more_apps"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="#f44236"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/k53"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="-8dp"
                    android:gravity="center"
                    android:text="@string/tests"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/margin_extra_small">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/k53_tests"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k53_tests_description" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/margin_extra_large"
                android:paddingVertical="@dimen/margin_extra_small"
                android:text="@string/menu"
                android:textAllCaps="true"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_extra_small"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small">

        <LinearLayout
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="#ff9803"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/k53"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-8dp"
                android:gravity="center"
                android:text="@string/signs_controls"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/margin_extra_small">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/k53_signs_controls"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k53_signs_controls_description" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/margin_extra_large"
                android:paddingVertical="@dimen/margin_extra_small"
                android:text="@string/menu"
                android:textAllCaps="true"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>