<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_default"
    tools:context=".ui.learner.learn.LearnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_road_sign"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_signs" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_road_signs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/road_signs"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/road_signs_intro" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_road_rules"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_road_rules" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_road_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/road_rules"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/road_rules_intro" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_controls"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_controls" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/controls"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_intro" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>