<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.learner.learn.signs.RoadSignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:gravity="center_vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_road_sign"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_signs" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txv_road_signs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:gravity="center"
                    android:text="@string/road_signs"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/road_signs_description" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/road_signs_types"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/signs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</ScrollView>