<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ChooseLicenceTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.license.ChooseLicenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_license_type"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default">

        <LinearLayout
            android:id="@+id/btn_learners"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/inverted_button_background_shape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@null"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_learners"
                app:tint="@color/inverted_text_color_selector" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/learners"
                android:textColor="@color/inverted_text_color_selector"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_drivers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/inverted_button_background_shape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@null"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_drivers"
                app:tint="@color/inverted_text_color_selector" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/drivers"
                android:textColor="@color/inverted_text_color_selector"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>